--- a/themes/responsiv-flat/pages/contact-us.htm
+++ b/themes/responsiv-flat/pages/contact-us.htm
@@ -2,10 +2,14 @@ title = "Contact Us"
 url = "/contact-us"
 layout = "default"
 is_hidden = 0
+
+[contactus]
 ==
+{% set data = contactus.data %}
+
 <section id="layout-title">
     <div class="container">
-        <h3>Contact us</h3>
+        <h3>Hubungi Kami</h3>
     </div>
 </section>
 
@@ -13,59 +17,61 @@ is_hidden = 0
     <div class="row">
 
         <div class="col-md-7">
-            <p>Beef ribs pig spare ribs boudin pork chop swine. Shankle pastrami ham, doner prosciutto cow t-bone kielbasa turkey pig venison tail chicken leberkas. </p>
+            <p>Hubungi kami secara langsung untuk mendapatkan informasi terbaru</p>
             <form role="form">
                 <div class="form-group">
-                    <label for="email">Your email address</label>
+                    <label for="email">Alamat Email Anda</label>
                     <input type="email" class="form-control" id="email" placeholder="Enter email">
                 </div>
                 <div class="form-group">
-                    <label for="name">Your name</label>
+                    <label for="name">Nama</label>
                     <input type="text" class="form-control" id="name" placeholder="Enter name">
                 </div>
                 <div class="form-group">
-                    <label for="message">Your message</label>
-                    <textarea class="form-control" rows="7" id="message" placeholder="Enter message" style="resize: none"></textarea>
+                    <label for="message">Pesan</label>
+                    <textarea class="form-control" rows="7" id="message" placeholder="Enter message"
+                              style="resize: none"></textarea>
                 </div>
 
                 <div class="row">
                     <div class="col-sm-6">
-                        <button type="submit" class="btn btn-lg btn-info">Send message</button>
+                        <button type="submit" class="btn btn-lg btn-info">Kirim Pesan</button>
                     </div>
-                    <div class="col-sm-6">
-                        <label class="checkbox pull-right" for="checkbox1">
-                            <input type="checkbox" value="" id="checkbox1" data-toggle="checkbox">
-                            Send a copy to myself
-                        </label>
-                    </div>
+                    <!--<div class="col-sm-6">-->
+                    <!--<label class="checkbox pull-right" for="checkbox1">-->
+                    <!--<input type="checkbox" value="" id="checkbox1" data-toggle="checkbox">-->
+                    <!--Send a copy to myself-->
+                    <!--</label>-->
+                    <!--</div>-->
                 </div>
             </form>
-            <br /><br />
+            <br/><br/>
 
         </div>
 
         <div class="col-md-5">
             <div class="contact-banner">
-                <h3 class="banner-title">Our location</h3>
+                <h3 class="banner-title">Lokasi Kami</h3>
                 <ul>
-                    <li>100 Pitt Street</li>
-                    <li>Sydney NSW, 2000</li>
-                    <li>Phone: +61 0000 0000</li>
-                    <li>Fax: +61 0000 0000</li>
-                    <li>Email: <a href="#">some@email.dev.null</a></li>
+                    <!--<li>100 Pitt Street</li>-->
+                    <!--<li>Email : {{ data.email }}</li>-->
+                    <li>Telpon: {{ data.phone }}</li>
+                    <!--<li>Fax: +61 0000 0000</li>-->
+                    <li>Email: <a href="#">{{ data.email }}</a></li>
                 </ul>
             </div>
 
             <div class="google-maps">
-              <iframe
-                width="500"
-                height="450"
-                frameborder="0"
-                scrolling="no"
-                marginheight="0"
-                marginwidth="0"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52978.975064878534!2d151.21417105100554!3d-33.910613674462084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney+NSW%2C+Australia!5e0!3m2!1sen!2sus!4v1406012463524"></iframe>
+                <iframe
+                        width="500"
+                        height="450"
+                        frameborder="0"
+                        scrolling="no"
+                        marginheight="0"
+                        marginwidth="0"
+                        src="https://maps.google.com/maps?width=500&amp;height=450&amp;hl=en&amp;coord=-{{ data.latitude}},{{ data.longitude }}&amp;q=1%20Grafton%20Street%2C%20Dublin%2C%20Ireland+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed"
             </div>
+            <br/>
 
         </div>
 
