--- a/themes/responsiv-flat/pages/product/item.htm
+++ b/themes/responsiv-flat/pages/product/item.htm
@@ -27,6 +27,13 @@ sorting = "new"
     <link href="{{ [
         'assets/vendor/slick/slick.css',
     ]|theme }}" rel="stylesheet">
+
+<style type="text/css">
+    .brand-icon {
+        width: 30px;
+        height: auto;
+    }
+</style>
 {% endput %}
 {% put scripts %}
     <script src="{{ [
@@ -64,16 +71,16 @@ sorting = "new"
                 <div class="col-sm-6">
 
                     <div id="shopImages" class="shop-images">
+                        <!--{{ obProduct.images[0].path }}-->
+                        {% set img_product = obProduct.images %}
+                        {% for in, img in img_product %}
+                        <!--{{ img_product }}-->
                         <div>
                             <a href="">
-                                <img src="{{ obProduct.preview_image.path }}" class="img-responsive main" alt="">
+                                <img src="{{ img.path }}" class="img-responsive{% if lopp.first %} main{% endif %}" style="width: 100%; max-height: 275px" alt="">
                             </a>
                         </div>
-                        <div>
-                            <a href="">
-                                <img src="{{ obProduct.preview_image.path }}" class="img-responsive" alt="">
-                            </a>
-                        </div>
+                        {% endfor %}
                     </div>
 
                 </div>
@@ -81,11 +88,11 @@ sorting = "new"
 
                     <p class="text-muted">---------</p>
                     <div>
-                        {% if obProduct.link_shopee %}<p>Shopee : {{ obProduct.link_shopee }}</p>{% endif %}
-                        {% if obProduct.link_tokped %}<p>Tokopedia : <a href="https://{{ obProduct.link_tokped }}" target="_blank">Klik disini</a></p>{% endif %}
-                        {% if obProduct.link_bukalapak %}<p>Bukalapak : {{ obProduct.link_bukalapak }}</p>{% endif %}
+                        {% if obProduct.link_shopee %}<p> <a href="https://{{ obProduct.link_shopee }}" target="_blank"><img src="/themes/responsiv-flat/assets/images/shopee.png" alt="" class="brand-icon"></a></p>{% endif %}
+                        {% if obProduct.link_tokped %}<p> <a href="https://{{ obProduct.link_tokped }}" target="_blank"><img src="/themes/responsiv-flat/assets/images/tokopedia.png" alt="" class="brand-icon"></a></p>{% endif %}
+                        {% if obProduct.link_bukalapak %}<p> <a href="https://{{ obProduct.link_bukalapak }}" target="_blank"><img src="/themes/responsiv-flat/assets/images/bukalapak.png" alt="" class="brand-icon"></a></p>{% endif %}
                         <div class="price-block">
-                            <span class="price">{% if obProduct.price %}Rp {{ obProduct.price }} {% else %} Hubungi Kami {% endif %}</span>
+                            <span class="price">{% if obProduct.price %}Rp {{ obProduct.price|number_format(0, ',', '.') }} {% else %} Hubungi Kami {% endif %}</span>
                         </div>
                     </div>
                 </div>
@@ -96,7 +103,8 @@ sorting = "new"
             <div class="row">
                 <div class="col-sm-12">
                     <h4 class="headline"><span>Product details</span></h4>
-                    {{ obProduct.description }}
+                    {{ obProduct.description }} <br>
+
                 </div>
             </div>
             <div class="row">
