--- a/themes/responsiv-flat/pages/product/product.htm
+++ b/themes/responsiv-flat/pages/product/product.htm
@@ -43,8 +43,14 @@ smart_url_check = 0
                 <li class="hidden-sm"><a href="#last" data-toggle="tab">Last Chance</a></li>
             </ul>
 
-            <div>
-                ini buat menu sort
+            <div id="sort-menu">
+                <div class="row">
+                    <p>Urutkan Berdasarkan : </p>
+                    <button class="btn btn-sm btn-default">Harga Terendah</button>
+                    <button class="btn btn-sm btn-default">Harga Tertinggi</button>
+                    <button class="btn btn-sm btn-default">A-Z</button>
+                    <button class="btn btn-sm btn-default">Z-A</button>
+                </div>
             </div>
             <div class="row">
                 <div class="tab-content">
