--- a/themes/responsiv-flat/pages/product/product.htm
+++ b/themes/responsiv-flat/pages/product/product.htm
@@ -237,20 +237,12 @@ smart_url_check = 0
 </div>
 
 {% put scripts %}
-<!--<script-->
-<!--src="https://code.jquery.com/jquery-1.7.1.min.js"-->
-<!--integrity="sha256-iBcUE/x23aI6syuqF7EeT/+JFBxjPs5zeFJEXxumwb0="-->
-<!--crossorigin="anonymous"></script>-->
-<!--<script src="https://rawgithub.com/desandro/isotope/v1.5.25/jquery.isotope.js" type="text/javascript"></script>-->
-<!--<script-->
-        <!--src="https://code.jquery.com/jquery-1.6.4.min.js"-->
-        <!--integrity="sha256-lR1rrjnrFy9XqIvWhvepIc8GD9IfWWSPDSC2qPmPxaU="-->
-        <!--crossorigin="anonymous"></script>-->
 <script type="text/javascript">
     function sortByNameAscending() {
         var products = $('.item-brg');
         products.sort(function (a, b) {
-            return $(a).data("name") - $(b).data("name")
+//            return $(a).data("name") - $(b).data("name")
+            return ($(a) < $(b)) ? -1 : ($(a) > $(b)) ? 1 : 0;
         });
         $("#popular").html(products);
     }
@@ -289,7 +281,5 @@ smart_url_check = 0
             sortByPriceDescending();
         }
     });
-
-
 </script>
 {% endput %}
