--- a/themes/responsiv-flat/pages/product/item.htm
+++ b/themes/responsiv-flat/pages/product/item.htm
@@ -109,7 +109,7 @@ sorting = "new"
             <div class="row">
                 <div class="col-sm-12">
                     <h4 class="headline"><span>Product details</span></h4>
-                    {{ obProduct }} <br>
+                    {{ obProduct.content }} <br>
 
                 </div>
             </div>
